--- a/runner.ipynb
+++ b/runner.ipynb
@@ -2,10 +2,59 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "f016ed1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running locally. Skipping git clone.\n",
+      "Current working directory: /Users/javierdiegof/Documents/uiuc/research/code/embedding_pipeline\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    print(\"Running in Google Colab.\")\n",
+    "    \n",
+    "    repo_url = \"https://github.com/javierdiegof/paper_embedding.git\"\n",
+    "    repo_name = \"repository\"\n",
+    "\n",
+    "    if not os.path.exists(repo_name):\n",
+    "        print(f\"Cloning {repo_name}...\")\n",
+    "        os.system(f\"git clone {repo_url}\")\n",
+    "    else:\n",
+    "        print(f\"Repository '{repo_name}' already exists. Skipping clone.\")\n",
+    "\n",
+    "    os.chdir(repo_name)\n",
+    "    print(f\"Current working directory: {os.getcwd()}\")\n",
+    "\n",
+    "else:\n",
+    "    # Logic for your local machine\n",
+    "    print(\"Running locally. Skipping git clone.\")\n",
+    "    print(f\"Current working directory: {os.getcwd()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "03d9fc19",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/javierdiegof/Documents/uiuc/research/code/embedding_pipeline/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from paper_fetcher import fetch_papers\n",
     "from embeddings import ocr_directory_marker\n",
@@ -29,15 +78,9 @@
       "INFO:     Mapped 39 citations.\n",
       "INFO: --- Processing: BERT (ARXIV:1810.04805) ---\n",
       "INFO: Found api_key.json\n",
-      "WARNING:     !! Status 429. Retrying in 5s...\n",
       "INFO:     [Exists] BERT Pre-training of Deep Bidirectional Transformers for Language Understanding\n",
       "INFO:     Fetching citations...\n",
       "INFO:     Mapped 59 citations.\n",
-      "INFO: --- Processing: Deep Residual Learning for Image Recognition (ARXIV:1512.03385) ---\n",
-      "INFO: Found api_key.json\n",
-      "INFO:     [Exists] Deep Residual Learning for Image Recognition\n",
-      "INFO:     Fetching citations...\n",
-      "INFO:     Mapped 53 citations.\n",
       "INFO: --- Processing: Adam: A Method for Stochastic Optimization (ARXIV:1412.6980) ---\n",
       "INFO: Found api_key.json\n",
       "INFO:     [Exists] Adam A Method for Stochastic Optimization\n",
@@ -47,61 +90,12 @@
       "INFO: Found api_key.json\n",
       "INFO:     [Exists] Layer Normalization\n",
       "INFO:     Fetching citations...\n",
-      "INFO:     Mapped 32 citations.\n",
-      "INFO: --- Processing: Sequence to Sequence Learning with Neural Networks (ARXIV:1409.3215) ---\n",
-      "INFO: Found api_key.json\n",
-      "INFO:     [Exists] Sequence to Sequence Learning with Neural Networks\n",
-      "INFO:     Fetching citations...\n",
-      "INFO:     Mapped 38 citations.\n",
-      "INFO: --- Processing: Neural Machine Translation (Bahdanau Attention) (ARXIV:1409.0473) ---\n",
-      "INFO: Found api_key.json\n",
-      "INFO:     [Exists] Neural Machine Translation by Jointly Learning to Align and Translate\n",
-      "INFO:     Fetching citations...\n",
-      "INFO:     Mapped 29 citations.\n",
-      "INFO: --- Processing: Playing Atari with Deep Reinforcement Learning (ARXIV:1312.5602) ---\n",
-      "INFO: Found api_key.json\n",
-      "INFO:     [Exists] Playing Atari with Deep Reinforcement Learning\n",
-      "INFO:     Fetching citations...\n",
-      "INFO:     Mapped 30 citations.\n",
-      "INFO: --- Processing: Generative Adversarial Networks (ARXIV:1406.2661) ---\n",
-      "INFO: Found api_key.json\n",
-      "INFO:     [Exists] Generative Adversarial Nets\n",
-      "INFO:     Fetching citations...\n",
-      "INFO:     Mapped 33 citations.\n",
-      "INFO: --- Processing: Dropout (204e3073870fae3d05bcbc2f6a8e263d9b72e776) ---\n",
-      "INFO: Found api_key.json\n",
-      "INFO:     [Exists] Attention is All you Need\n",
-      "INFO:     Fetching citations...\n",
-      "INFO:     Mapped 39 citations.\n",
-      "INFO: --- Processing: Batch Normalization (ARXIV:1502.03167) ---\n",
-      "INFO: Found api_key.json\n",
-      "INFO:     [Exists] Batch Normalization Accelerating Deep Network Training by Reducing Internal Covariate Shift\n",
-      "INFO:     Fetching citations...\n",
-      "INFO:     Mapped 39 citations.\n",
-      "INFO: --- Processing: Mask R-CNN (ARXIV:1703.06870) ---\n",
-      "INFO: Found api_key.json\n",
-      "INFO:     [Exists] Mask R-CNN\n",
-      "INFO:     Fetching citations...\n",
-      "INFO:     Mapped 40 citations.\n",
-      "INFO: --- Processing: U-Net (ARXIV:1505.04597) ---\n",
-      "INFO: Found api_key.json\n",
-      "INFO:     [Exists] U-Net Convolutional Networks for Biomedical Image Segmentation\n",
-      "INFO:     Fetching citations...\n",
-      "INFO:     Mapped 15 citations.\n",
-      "INFO: --- Processing: You Only Look Once (YOLO) (ARXIV:1506.02640) ---\n",
-      "INFO: Found api_key.json\n",
-      "INFO:     [Exists] You Only Look Once Unified Real-Time Object Detection\n",
-      "INFO:     Fetching citations...\n",
-      "INFO:     Mapped 38 citations.\n",
-      "INFO: --- Processing: Distilling the Knowledge in a Neural Network (ARXIV:1503.02531) ---\n",
-      "INFO: Found api_key.json\n",
-      "INFO:     [Exists] Distilling the Knowledge in a Neural Network\n",
-      "INFO:     Fetching citations...\n",
-      "INFO:     Mapped 9 citations.\n"
+      "INFO:     Mapped 32 citations.\n"
      ]
     }
    ],
    "source": [
+    "\n",
     "fetch_papers()"
    ]
   },
@@ -134,7 +128,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "embedding_pipeline",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
