--- a/runner.ipynb
+++ b/runner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f016ed1c",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
     "    print(\"Running in Google Colab.\")\n",
     "    \n",
     "    repo_url = \"https://github.com/javierdiegof/paper_embedding.git\"\n",
-    "    repo_name = \"repository\"\n",
+    "    repo_name = \"paper_embedding\"\n",
     "\n",
     "    if not os.path.exists(repo_name):\n",
     "        print(f\"Cloning {repo_name}...\")\n",
@@ -38,6 +38,16 @@
     "    # Logic for your local machine\n",
     "    print(\"Running locally. Skipping git clone.\")\n",
     "    print(f\"Current working directory: {os.getcwd()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8582ecf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install chromadb bitsandbytes langchain-text-splitters thefuzz"
    ]
   },
   {
