--- a/runner.ipynb
+++ b/runner.ipynb
@@ -18,6 +18,7 @@
    "source": [
     "import sys\n",
     "import os\n",
+    "import logging\n",
     "\n",
     "if 'google.colab' in sys.modules:\n",
     "    print(\"Running in Google Colab.\")\n",
@@ -37,7 +38,14 @@
     "else:\n",
     "    # Logic for your local machine\n",
     "    print(\"Running locally. Skipping git clone.\")\n",
-    "    print(f\"Current working directory: {os.getcwd()}\")"
+    "    print(f\"Current working directory: {os.getcwd()}\")\n",
+    "\n",
+    "\n",
+    "logging.basicConfig(\n",
+    "    level=logging.DEBUG, \n",
+    "    format='%(asctime)s - %(name)s - %(levelname)s - %(message)s',\n",
+    "    force=True\n",
+    ")"
    ]
   },
   {
