Changed logging to info

--- a/runner.ipynb
+++ b/runner.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "\n",
     "logging.basicConfig(\n",
-    "    level=logging.DEBUG, \n",
+    "    level=logging.INFO, \n",
     "    format='%(asctime)s - %(name)s - %(levelname)s - %(message)s',\n",
     "    force=True\n",
     ")"
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "a8db81f9",
    "metadata": {},
    "outputs": [
@@ -91,22 +91,22 @@
      "text": [
       "INFO: --- Processing: Attention Is All You Need (ARXIV:1706.03762) ---\n",
       "INFO: Found api_key.json\n",
-      "INFO:     [Exists] Attention is All you Need\n",
+      "INFO:     [Downloaded] Attention is All you Need\n",
       "INFO:     Fetching citations...\n",
       "INFO:     Mapped 39 citations.\n",
       "INFO: --- Processing: BERT (ARXIV:1810.04805) ---\n",
       "INFO: Found api_key.json\n",
-      "INFO:     [Exists] BERT Pre-training of Deep Bidirectional Transformers for Language Understanding\n",
+      "INFO:     [Downloaded] BERT Pre-training of Deep Bidirectional Transformers for Language Understanding\n",
       "INFO:     Fetching citations...\n",
       "INFO:     Mapped 59 citations.\n",
       "INFO: --- Processing: Adam: A Method for Stochastic Optimization (ARXIV:1412.6980) ---\n",
       "INFO: Found api_key.json\n",
-      "INFO:     [Exists] Adam A Method for Stochastic Optimization\n",
+      "INFO:     [Downloaded] Adam A Method for Stochastic Optimization\n",
       "INFO:     Fetching citations...\n",
       "INFO:     Mapped 23 citations.\n",
       "INFO: --- Processing: Layer Normalization (ARXIV:1607.06450) ---\n",
       "INFO: Found api_key.json\n",
-      "INFO:     [Exists] Layer Normalization\n",
+      "INFO:     [Downloaded] Layer Normalization\n",
       "INFO:     Fetching citations...\n",
       "INFO:     Mapped 32 citations.\n"
      ]
