Removed papers from markdown

--- a/runner.ipynb
+++ b/runner.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "03d9fc19",
    "metadata": {},
    "outputs": [
@@ -75,13 +75,12 @@
    ],
    "source": [
     "from paper_fetcher import fetch_papers\n",
-    "from embeddings import ocr_directory_marker\n",
-    "from embeddings import run_pipeline"
+    "from embeddings import ocr_directory_marker, run_pipeline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a8db81f9",
    "metadata": {},
    "outputs": [
@@ -113,7 +112,6 @@
     }
    ],
    "source": [
-    "\n",
     "fetch_papers()"
    ]
   },
