print all the matching paragraph

--- a/runner.ipynb
+++ b/runner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f016ed1c",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "03d9fc19",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a8db81f9",
    "metadata": {},
    "outputs": [
@@ -287,6 +287,88 @@
     "paper_contents = ocr_directory_marker(\"seed_papers\", ocr_output_dir)\n",
     "run_pipeline(ocr_output_dir)\n",
     "print(f\"\\nDone! Processed {len(paper_contents)} papers.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1bb5e83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO: Use pytorch device_name: mps\n",
+      "INFO: Load pretrained SentenceTransformer: nomic-ai/nomic-embed-text-v1.5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading RAG System\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: <All keys matched successfully>\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded Collection with 117 chunks.\n",
+      "\n",
+      "Query 1: The description of the initialization bias correction of the adam algorithm\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Batches: 100%|██████████| 1/1 [00:00<00:00,  1.82it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Best Match Score (L2 Distance): 155.4343\n",
+      "    Source Paper: Adam A Method for Stochastic Optimization\n",
+      "    Context (LLM Generated):\n",
+      "     \"The text discusses the Adam optimization algorithm, explaining how it maintains running averages of the gradient and its square, the challenges of initial bias due to zero initialization, and the method to correct this bias, while also mentioning potential improvements in computational efficiency through altered computation\"\n",
+      "    Snippet:\n",
+      "     \"The algorithm updates exponential moving averages of the gradient  $(m_t)$  and the squared gradient  $(v_t)$  where the hyper-parameters  $\\beta_1, \\beta_2 \\in [0,1)$  control the exponential decay rates of these moving averages. The moving averages themselves are estimates of the 1<sup>st</sup> moment (the mean) and the 2<sup>nd</sup> raw moment (the uncentered variance) of the gradient. However, these moving averages are initialized as (vectors of) 0's, leading to moment estimates that are biased towards zero, especially during the initial timesteps, and especially when the decay rates are small (i.e. the  $\\beta$ s are close to 1). The good news is that this initialization bias can be easily counteracted, resulting in bias-corrected estimates  $\\widehat{m}_t$  and  $\\widehat{v}_t$ . See section 3 for more details.\n",
+      "\n",
+      "Note that the efficiency of algorithm 1 can, at the expense of clarity, be improved upon by changing the order of computation, e.g. by replacing the last three lines in the loop with the following lines:  $\\alpha_t = \\alpha \\cdot \\sqrt{1 - \\beta_2^t}/(1 - \\beta_1^t)$  and  $\\theta_t \\leftarrow \\theta_{t-1} - \\alpha_t \\cdot m_t/(\\sqrt{v_t} + \\hat{\\epsilon})$ .\n",
+      "\n",
+      "#### 2.1 Adam's update rule\n",
+      "\n",
+      "An important property of Adam's update rule is its careful choice of stepsizes. Assuming  $\\epsilon=0$ , the effective step taken in parameter space at timestep t is  $\\Delta_t=\\alpha\\cdot\\widehat{m}_t/\\sqrt{\\widehat{v}_t}$ . The effective stepsize has two upper bounds:  $|\\Delta_t|\\leq \\alpha\\cdot(1-\\beta_1)/\\sqrt{1-\\beta_2}$  in the case  $(1-\\beta_1)>\\sqrt{1-\\beta_2}$ , and  $|\\Delta_t|\\leq \\alpha$...\"\n",
+      "   ► Resolved Citations (Snowball targets):\n",
+      "     - No citations in this chunk.\n",
+      "------------------------------------------------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from importlib import reload\n",
+    "import retriever\n",
+    "reload(retriever)\n",
+    "retriever.query_db([\n",
+    "    \"The description of the initialization bias correction equation for adam\"\n",
+    "])"
    ]
   }
  ],
